--- a/servlet/.settings/org.eclipse.wst.common.component
+++ b/servlet/.settings/org.eclipse.wst.common.component
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="extraction">
+    <wb-module deploy-name="outilssgdf">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <dependent-module archiveName="extraction-convertisseur-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/extraction-convertisseur/extraction-convertisseur">
+        <dependent-module archiveName="common-0.0.8.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/common/common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="extraction"/>
         <property name="java-output-path" value="/extraction-servlet/target/classes"/>
+        <property name="context-root" value="outilssgdf"/>
     </wb-module>
 </project-modules>
